added navbar partials etc.

--- a/views/animes/index.ejs
+++ b/views/animes/index.ejs
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anime Recommend</title>
+  <title>Your Anime List</title>
 </head>
 <body>
-  <%- include('./partials/_navbar.ejs') %>
-  <h1>Anime Recommend</h1>
-  <p>Keep track of your favorite anime!</p>
+    <%- include('../partials/_navbar.ejs') %>
+  <h1>Your Anime List</h1>
 </body>
 </html>
