--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -3,6 +3,7 @@
 <nav>
     <% if(user) { %>
       <a href="/users/<%= user._id %>/animes">Your Anime</a>
+      <a href="/users">Explore Our Community</a> 
       <a href="/auth/sign-out">Sign Out</a>
     <% } else { %>
       <a href="/auth/sign-in">Sign In</a>
