--- a/views/animes/new.ejs
+++ b/views/animes/new.ejs
@@ -10,7 +10,6 @@
 <body>
   <%- include('../partials/_navbar.ejs') %>
   <h1>Add a New Anime</h1>
-<!-- views/animes/new.ejs -->
 <form action="/users/<%= user._id %>/animes" method="POST">
   <label for="title">Title:</label>
   <input type="text" name="title" id="title" required>
@@ -28,6 +27,8 @@
   <label for="recommended">Recommended:</label>
   <input type="checkbox" name="recommended" id="recommended">
 
+  <label for="notes">Notes:</label>
+  <textarea name="notes" id="notes"></textarea>
   <button type="submit">Add Anime</button>
 </form>
 
