--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,13 +1,17 @@
 <!-- views/partials/_navbar.ejs -->
 
 <nav>
-    <% if(user) { %>
-      <a href="/users/<%= user._id %>/animes">Your Anime</a>
-      <a href="/users">Explore Our Community</a> 
-      <a href="/auth/sign-out">Sign Out</a>
-    <% } else { %>
-      <a href="/auth/sign-in">Sign In</a>
-      <a href="/auth/sign-up">Sign Up</a>
-    <% } %>
-  </nav>
+  <% if (user) { %>
+    <a href="/users/<%= user._id %>/animes">Your Anime</a>
+    <a href="/users">Explore Our Community</a>
+    <form action="/users/search" method="GET" style="display:inline;">
+      <input type="text" name="username" placeholder="Search Users">
+      <button type="submit">Search</button>
+    </form>
+    <a href="/auth/sign-out">Sign Out</a>
+  <% } else { %>
+    <a href="/auth/sign-in">Sign In</a>
+    <a href="/auth/sign-up">Sign Up</a>
+  <% } %>
+</nav>
   
