--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -7,11 +7,14 @@
 </head>
 <body>
   <%- include('../partials/_navbar.ejs') %>
-  <h1>Community</h1>
+  <h1>Explore Our Community</h1>
   <ul>
     <% users.forEach((user) => { %>
-      <li><a href="/users/<%= user._id %>"><%= user.username %></a></li>
+      <li>
+        <a href="/users/<%= user._id %>"><%= user.username %></a>
+      </li>
     <% }) %>
   </ul>
 </body>
 </html>
+
