added styling to home page, sign-in, sign-up

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/style.css" />
   <title>Anime Recommend</title>
 </head>
 <body>
   <%- include('./partials/_navbar.ejs') %>
+  <div class="landing-image"></div>
   <h1>Anime Recommend</h1>
   <p>Keep track of your favorite anime!</p>
 </body>
