--- a/views/animes/edit.ejs
+++ b/views/animes/edit.ejs
@@ -1,4 +1,5 @@
 <!-- views/animes/edit.ejs -->
+<link rel="stylesheet" href="/stylesheets/style.css" />
 <form action="/users/<%= userId %>/animes/<%= animeItem._id %>?_method=PUT" method="POST">
   <label for="title">Title:</label>
   <input type="text" name="title" id="title" value="<%= animeItem.title %>" required>
