re-did landing and nav, deleted images directory

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,10 @@
 <body>
   <%- include('./partials/_navbar.ejs') %>
   <div class="landing-image"></div>
-  <h1>Anime Recommend</h1>
-  <p>Keep track of your favorite anime!</p>
+  <div class="landing-content">
+    <h1>Anime Recommend</h1>
+    <p>Keep track of your favorite anime!</p>
+  </div>
 </body>
 </html>
+
